--- a/beta/products/apt-general.html
+++ b/beta/products/apt-general.html
@@ -9,6 +9,34 @@
   <meta name="robots" content="noindex, nofollow" />
 
   <link rel="stylesheet" href="/assets/styles.css?v=20251117-beta" />
+
+  <!-- 이 페이지 전용 작은 보조 스타일 -->
+  <style>
+    /* 히어로 카드 안의 주석 문구 약간 연하게 */
+    .hero-summary-note{
+      margin-top:8px;
+      font-size:11px;
+      color:#6b7280;
+    }
+    /* 하단 뒤로가기 칩 버튼 */
+    .back-chip{
+      display:inline-flex;
+      align-items:center;
+      justify-content:center;
+      padding:6px 14px;
+      border-radius:999px;
+      background:#e9d2b0;      /* 옅은 갈색 계열 */
+      border:1px solid #d7b98d;
+      color:#4b2c06;
+      font-size:12px;
+      font-weight:700;
+      text-decoration:none;
+      line-height:1;
+    }
+    .back-chip:hover{
+      background:#dec299;
+    }
+  </style>
 </head>
 <body class="beta-body">
 
@@ -48,143 +76,113 @@
   </header>
 
   <main class="products-main">
-    <!-- 섹션 1. 히어로 영역 -->
+
+    <!-- 히어로 영역 -->
     <section class="products-hero">
       <h1 class="products-hero__title">아파트 – 일반담보대출</h1>
-      <p class="products-hero__desc">
-        온라인투자연계금융업 아파트담보대출 상품 중
-        <strong>‘일반담보대출’</strong> 관련 설명입니다.
-        <br /><br />
-        <strong>대상고객:</strong> 은행·저축은행 주택담보대출로는 한도가 부족하거나, 추가 자금이 필요한 개인<br />
-        <strong>대출한도:</strong> 1천만원 ~ 70억원<br />
-        <strong>대출약정:</strong> 대면 또는 비대면(업체별 상이)<br />
-        <strong>대출금리:</strong> 최저 6% ~ 최대 15.5%<br />
-        <strong>플랫폼수수료:</strong> 최소 1.7% ~ 5.0% 이내 (부가세 별도)
-        <br /><br />
-        <em style="font-size:12px;color:#6b7280;">
-          *해당 정보는 온투업에서 취급중인 부동산 담보대출상품과 실제 대출 사례를 바탕으로 구성된
-          단순 정보 제공용 콘텐츠입니다. (대출한도 등 관련 문의는 각 온투업사에 문의하세요.)
-        </em>
-      </p>
 
-      <!-- 태그 블록 (SEO 키워드 노출용) -->
-      <div class="product-card__tags" style="margin-top:10px;">
-        <span class="product-tag">#아파트대출</span>
-        <span class="product-tag">#아파트담보대출</span>
-        <span class="product-tag">#아파트주담대</span>
-        <span class="product-tag">#아파트대출한도</span>
-        <span class="product-tag">#아파트대출금리</span>
-        <span class="product-tag">#후순위주담대</span>
-        <span class="product-tag">#후순위담보대출</span>
-        <span class="product-tag">#후순위주담대한도</span>
-        <span class="product-tag">#후순위대출금리</span>
-        <span class="product-tag">#P2P주담대</span>
-        <span class="product-tag">#온투업대출</span>
-        <span class="product-tag">#담보대출계산기</span>
-      </div>
+      <!-- 히어로 내용을 하나의 카드 안에 정리 -->
+      <article class="product-info-card">
+        <p>
+          온라인투자연계금융업 아파트담보대출 상품 중 <strong>‘일반담보대출’</strong> 관련 설명 입니다.
+        </p>
+        <p><strong>대상고객:</strong> 은행·저축은행 주택담보대출로는 한도가 부족하거나, 추가 자금이 필요한 개인</p>
+        <p><strong>대출한도:</strong> 1천만원 ~ 70억원</p>
+        <p><strong>대출약정:</strong> 대면 또는 비대면(업체별 상이)</p>
+        <p><strong>대출금리:</strong> 최저 6% ~ 최대 15.5%</p>
+        <p><strong>플랫폼수수료:</strong> 최소 1.7% ~ 5.0% 이내 (부가세 별도)</p>
 
-      <!-- 허브로 돌아가기 버튼 -->
-      <div style="margin-top:12px;">
-        <a href="/beta/products/" class="product-btn">
-          ← 온투업 대출상품정보 허브로 돌아가기
-        </a>
-      </div>
+        <p class="hero-summary-note">
+          *해당 정보는 온투업에서 취급중인 부동산 담보대출상품과 실제 대출 사례를 바탕으로 구성된 단순 정보 제공용 콘텐츠입니다.
+          (대출한도 등 관련 문의는 각 온투업사에 문의하세요.)
+        </p>
+      </article>
     </section>
 
-    <!-- 섹션 2. 상세안내 -->
+    <!-- 1. 상세안내 -->
     <section class="products-section">
-      <h2 class="products-section__title">2. 상세안내</h2>
+      <h2 class="products-section__title">1. 상세안내</h2>
       <article class="product-info-card">
-        <h3>대출 기본 조건</h3>
-
-        <h4 style="margin:8px 0 4px;font-size:13px;font-weight:800;color:#111827;">대출대상</h4>
-        <ul style="margin:0 0 8px 18px;font-size:13px;color:#4b5563;line-height:1.6;">
+        <h3>대출대상</h3>
+        <ul>
           <li>만 19세 이상 내국인</li>
           <li>신용점수 (NICE) 350점 또는 (KCB) 454점 이상 고객</li>
           <li>KB시세 등재 아파트 또는 주상복합</li>
           <li>본인 혹은 배우자 소득이 있는 고객</li>
         </ul>
 
-        <h4 style="margin:8px 0 4px;font-size:13px;font-weight:800;color:#111827;">대출한도</h4>
-        <ul style="margin:0 0 8px 18px;font-size:13px;color:#4b5563;line-height:1.6;">
+        <h3>대출한도</h3>
+        <ul>
           <li>최소 1천만원 ~ 최대 70억원</li>
         </ul>
 
-        <h4 style="margin:8px 0 4px;font-size:13px;font-weight:800;color:#111827;">대출기간</h4>
-        <ul style="margin:0 0 8px 18px;font-size:13px;color:#4b5563;line-height:1.6;">
+        <h3>대출기간</h3>
+        <ul>
           <li>6개월 ~ 24개월</li>
         </ul>
 
-        <h4 style="margin:8px 0 4px;font-size:13px;font-weight:800;color:#111827;">상환방법</h4>
-        <ul style="margin:0 0 8px 18px;font-size:13px;color:#4b5563;line-height:1.6;">
+        <h3>상환방법</h3>
+        <ul>
           <li>만기일시상환</li>
         </ul>
 
-        <h4 style="margin:8px 0 4px;font-size:13px;font-weight:800;color:#111827;">만기연장</h4>
-        <ul style="margin:0 0 8px 18px;font-size:13px;color:#4b5563;line-height:1.6;">
-          <li>연장 가능</li>
-          <li style="list-style:none;margin-left:-18px;font-size:12px;color:#6b7280;">
-            *연장 시 담보가치 하락, 신용정보 변동 등에 따라 연장이 어려울 수 있으며,
-            연장 시 금리와 플랫폼 수수료가 변경될 수 있습니다.
-          </li>
+        <h3>만기연장</h3>
+        <ul>
+          <li>연장가능</li>
         </ul>
+        <p style="font-size:12px;color:#6b7280;margin-top:2px;">
+          *연장 시 담보가치 하락, 신용정보 변동 등에 따라 연장이 어려울 수 있으며,
+          연장 시 금리와 플랫폼 수수료가 변경될 수 있습니다.
+        </p>
 
-        <h4 style="margin:8px 0 4px;font-size:13px;font-weight:800;color:#111827;">플랫폼수수료</h4>
-        <ul style="margin:0 0 8px 18px;font-size:13px;color:#4b5563;line-height:1.6;">
+        <h3>플랫폼수수료</h3>
+        <ul>
           <li>플랫폼 수수료: 최소 1.7% ~ 5.0% 이내 (부가세 별도)</li>
         </ul>
 
-        <h4 style="margin:8px 0 4px;font-size:13px;font-weight:800;color:#111827;">기타·부대비용</h4>
-        <ul style="margin:0 0 8px 18px;font-size:13px;color:#4b5563;line-height:1.6;">
+        <h3>기타·부대비용</h3>
+        <ul>
           <li>근저당권 설정 관련 비용</li>
           <li>대출금 입금 시 차감 또는 이자와 함께 납부</li>
           <li>대출심사 결과에 따라 수수료율 및 분할 납부 개월 수 차등 적용</li>
         </ul>
 
-        <h4 style="margin:8px 0 4px;font-size:13px;font-weight:800;color:#111827;">중도상환수수료</h4>
-        <ul style="margin:0 0 0 18px;font-size:13px;color:#4b5563;line-height:1.6;">
+        <h3>중도상환수수료</h3>
+        <ul>
           <li>중도상환금액 × 0% ~ 1.00% (업체별 상이)</li>
         </ul>
       </article>
     </section>
 
-    <!-- 섹션 3. 이런 경우 많이 이용 -->
+    <!-- 2. 온투업(P2P)담보대출을 찾는 경우는? -->
     <section class="products-section">
-      <h2 class="products-section__title">3. 아파트 일반담보대출을 많이 찾는 상황</h2>
-      <div class="products-info-grid">
-        <article class="product-info-card">
-          <h3>1) 사업·투자·세금 자금이 급할 때</h3>
-          <p>
-            이미 1순위 <strong>아파트주담대</strong>가 있는 상황에서
-            추가로 <strong>운영자금, 사업자금, 세금 납부 자금</strong>이 필요한 경우,
-            후순위주담대를 통해 <strong>추가한도</strong>를 확보하는 수요가 많습니다.
-          </p>
-        </article>
-        <article class="product-info-card">
-          <h3>2) 대부업대출 대환이 필요한 경우</h3>
-          <p>
-            기존에 이용 중인 <strong>대부업대출</strong> 금리가 매우 높은 경우,
-            아파트담보대출 구조로 갈아타는 <strong>대부대환대출</strong>을 검토하기도 합니다.
-            이때는 <strong>아파트대출금리</strong>뿐 아니라
-            <strong>각종 수수료와 중도상환수수료</strong>를 함께 비교해야 합니다.
-          </p>
-        </article>
-        <article class="product-info-card">
-          <h3>3) 경락잔금·임대보증금반환 등과 함께 설계</h3>
-          <p>
-            <strong>경락잔금대출, 임대보증금반환대출, 지분대출</strong>과
-            함께 설계되는 복합 구조도 많습니다.
-            이 페이지는 <strong>“일반담보대출”</strong> 중심 설명이지만,
-            아파트지분대출, 경락잔금대출 페이지와 함께 보시면
-            보다 입체적인 구조 이해에 도움이 됩니다.
-          </p>
-        </article>
-      </div>
+      <h2 class="products-section__title">2. 온투업(P2P)담보대출을 찾는 경우는?</h2>
+      <article class="product-info-card">
+        <ul>
+          <li>
+            <strong>사업·투자·세금 자금이 급할 때</strong><br />
+            이미 1순위 대출이 있는 상황에서 수술비, 자녀결혼비용, 사업운영자금, 세금 납부 등
+            급하게 목돈이 필요한 경우, 후순위주담대를 통해 자금을 확보하는 수요가 많습니다.
+          </li>
+          <li>
+            <strong>대부업대출 대환이 필요한 경우</strong><br />
+            대부업대출을 이용중에 온투업으로 대부대환대출을 고려하는 경우입니다.
+            이때는 기존 각종 수수료와 중도상환수수료를 함께 비교해야 합니다.
+          </li>
+          <li>
+            <strong>은행에서 대출이 안되서 곤란한 경우</strong><br />
+            낙찰 받은 후 자금계획이 변경된 경우, 신규 임차인을 구하기 전에
+            기존 임차인 보증금을 반환해줘야 할 때,
+            가족·친척들과 공동소유중인 부동산에 내 지분만으로 대출을 받고 싶을 때
+            온투업 담보대출을 고려하시는 경우가 많습니다.
+          </li>
+        </ul>
+      </article>
     </section>
 
-    <!-- 섹션 4. FAQ -->
+    <!-- 3. 자주 묻는 질문 (FAQ) -->
     <section class="products-section products-section--info">
-      <h2 class="products-section__title">4. 자주 묻는 질문 (FAQ)</h2>
+      <h2 class="products-section__title">3. 자주 묻는 질문 (FAQ)</h2>
       <div class="products-info-grid">
         <article class="product-info-card">
           <h3>Q. 아파트담보대출 한도는 어떻게 정해지나요?</h3>
@@ -198,53 +196,68 @@
           <h3>Q. 연체이력, 세금체납 이력이 있어도 대출이 가능한가요?</h3>
           <p>
             네. 가능한 온투업체가 있습니다.
-            다만, 연체 이력·세금 체납 이력 등에 따라
-            <strong>금리·플랫폼수수료 등 조건이 차등 적용</strong>될 수 있습니다.
+            단, 금리·플랫폼수수료 등 조건이 차등 적용될 수 있습니다.
           </p>
         </article>
         <article class="product-info-card">
           <h3>Q. 후추의 담보대출 계산기는 얼마나 정확한가요?</h3>
           <p>
-            후추 담보대출계산기는 온투업에서 실제 취급했던 담보대출 정보를 기반으로
-            설계되어 있습니다. 한도 및 금리는 각 업체별 상담을 통해 최종 확정되지만,
-            <strong>대출 가능·불가능에 대한 결과는 90% 이상 정확</strong>하여
-            불필요한 상담을 피하는 데 도움이 됩니다.
-            또한 개인정보 입력 없이, 간단한 정보만으로도 계산이 가능합니다.
+            온투업에서 실제 취급했던 담보대출 정보를 기반으로 계산되기 때문에
+            한도 및 금리는 각 업체별로 상담을 통해 확인 가능하나,
+            <strong>대출 가능·불가능에 대한 결과는 90% 이상</strong> 정확하여
+            불필요한 상담을 피할 수 있습니다.
+            또한 개인정보 입력 없이 간단한 정보만으로도 가능합니다.
           </p>
         </article>
       </div>
     </section>
 
-    <!-- 섹션 5. 담보대출계산기 안내 -->
+    <!-- 담보대출계산기 안내 -->
     <section class="products-section">
-      <h2 class="products-section__title">5. 후추 담보대출계산기와 함께 확인하세요</h2>
+      <h2 class="products-section__title">후추 담보대출계산기와 함께 확인하세요</h2>
       <article class="product-info-card">
         <h3>담보대출계산기로 LTV와 추가한도 먼저 체크</h3>
         <p>
           후추의 <strong>담보대출계산기</strong>를 이용하면
-          소유 중인 아파트에 대해
-          간단히 <strong>대출 가능 여부</strong>를 확인해 볼 수 있습니다.
-          <br />
-          실제 온투업체 상담 전, 대략적인 조건을 이해하는 데 도움이 되며,
-          대출이 가능한 경우 <strong>49개 온투업체</strong> 중
-          조건에 맞는 온투업체를 확인할 수 있습니다.
+          소유중인 아파트에 대해 간단히 대출 가능 여부를 확인해 볼 수 있습니다.
+          실제 온투업체에 상담 전, 대략적인 조건을 이해하는 데 도움이 되며,
+          대출이 가능한 경우 49개 온투업체 중 조건에 맞는 온투업체를 확인할 수 있습니다.
         </p>
         <p style="margin-top:8px;">
           👉 <a href="/" style="color:#1d4ed8;font-weight:700;text-decoration:underline;">
-            후추 담보대출계산기 바로가기
+          후추 담보대출계산기 바로가기
           </a>
         </p>
       </article>
     </section>
 
-    <!-- 섹션 6. 뒤로가기 버튼 -->
+    <!-- 해시태그: 계산기 안내와 뒤로가기 버튼 사이 -->
+    <section class="products-section">
+      <div class="product-card__tags">
+        <span class="product-tag">#아파트대출</span>
+        <span class="product-tag">#아파트담보대출</span>
+        <span class="product-tag">#아파트주담대</span>
+        <span class="product-tag">#아파트대출한도</span>
+        <span class="product-tag">#아파트대출금리</span>
+        <span class="product-tag">#후순위주담대</span>
+        <span class="product-tag">#후순위담보대출</span>
+        <span class="product-tag">#후순위주담대한도</span>
+        <span class="product-tag">#후순위대출금리</span>
+        <span class="product-tag">#P2P주담대</span>
+        <span class="product-tag">#온투업대출</span>
+        <span class="product-tag">#담보대출계산기</span>
+      </div>
+    </section>
+
+    <!-- 뒤로가기 칩 버튼 -->
     <section class="products-section">
       <div style="text-align:left;">
-        <a href="/beta/products/" class="product-btn">
-          ← 뒤로가기
+        <a href="/beta/products/" class="back-chip">
+          &lt; 뒤로가기
         </a>
       </div>
     </section>
+
   </main>
 
   <footer class="beta-footer" role="contentinfo">
