--- a/beta/products/apt-deposit.html
+++ b/beta/products/apt-deposit.html
@@ -134,7 +134,7 @@
           <li>만 19세 이상 내국인</li>
           <li>신용점수 (NICE) 350점 또는 (KCB) 454점 이상 고객</li>
           <li>본인 또는 배우자 명의로 아파트를 소유 중인 임대인</li>
-          <li>전세·반전세·월세 등 임대보증금 반환 자금이 필요한 고객</li>
+          <li>임대중인 부동산에 보증금 반환 자금이 필요한 고객</li>
           <li>본인 혹은 배우자 소득이 있는 고객</li>
         </ul>
 
@@ -184,7 +184,7 @@
           <li>근저당권 설정 관련 비용</li>
           <li>임대차 권리조사 비용</li>
           <li>감정비용 (시세 확인이 어려운 경우)</li>
-          <li>출장 자서비용 등(대면 자서 온투업사의 경우)</li>
+          <li>출장 자서비용 등 (대면 자서 온투업사의 경우)</li>
         </ul>
 
         <h3>중도상환수수료</h3>
