--- a/beta/products/apt-share.html
+++ b/beta/products/apt-share.html
@@ -40,7 +40,7 @@
           <a class="beta-menu-link" href="/beta/products/">온투업 대출상품정보(베타)</a>
           <a class="beta-menu-link" href="/">담보대출 계산기</a>
           <a class="beta-menu-link" href="/company.html">회사소개</a>
-          <a class="beta-menu-link" href="/contact.html">제휴 및 기타문의</a>
+          <a class="beta-menu-link" href="/contact.html">광고문의</a>
           <a class="beta-menu-link" href="/beta/admin-beta.html">관리자(베타)</a>
         </div>
       </div>
