--- a/beta/index.html
+++ b/beta/index.html
@@ -60,10 +60,29 @@
         <div class="beta-hero-grid">
 
           <!-- 왼쪽: 메인 배너 -->
-         <!-- 왼쪽: 이미지형 히어로 배너 -->
-    <a href="#" class="beta-hero-banner">
-      <img src="/assets/hero/banner1.png" alt="온투업 담보대출 통계/계산기 서비스 소개 배너">
-    </a>
+         <div class="beta-hero-banner" id="heroBanner">
+
+           <!-- 1번 배너 -->
+  <a href="/beta/products/index.html"
+     class="beta-hero-banner__slide is-active">
+    <img src="/assets/hero/hero-01.png"
+         alt="온투업 담보대출 상품 통계 안내 배너">
+  </a>
+
+  <!-- 2번 배너 -->
+  <a href="/beta/"
+     class="beta-hero-banner__slide">
+    <img src="/assets/hero/hero-02.png"
+         alt="온투업 담보대출 통계 요약 배너">
+  </a>
+
+  <!-- 점(●●) 네비게이션 -->
+  <div class="beta-hero-banner__dots">
+    <button class="dot is-active" data-index="0" type="button"></button>
+    <button class="dot" data-index="1" type="button"></button>
+  </div>
+</div>
+
           <!-- 오른쪽: 2×2 기능 카드 + 금일 이용자수 + 서브 배너 -->
           <div class="beta-hero-right">
 
