--- a/beta/products/villa-deposit.html
+++ b/beta/products/villa-deposit.html
@@ -65,7 +65,7 @@
         <p>· <strong>대상고객</strong> Ι 임차인 보증금 반환 자금이 필요한 임대인(개인)</p>
         <p>· <strong>대출한도</strong> Ι 최소 2천만원 ~ 최대 70억원</p>
         <p>· <strong>대출약정</strong> Ι 대면 또는 비대면 (업체별 상이)</p>
-        <p>· <strong>대출금리</strong> Ι 최저 6.7% ~ 최대 15.9%</p>
+        <p>· <strong>대출금리</strong> Ι 최저 10.0% ~ 최대 15.9%</p>
         <p>· <strong>플랫폼수수료</strong> Ι 최소 1.7% ~ 5.0% 이내 (부가세 별도)</p>
 
         <p class="hero-summary-note hero-note-main">
@@ -110,7 +110,7 @@
           <p class="calculator-extra-text">
             후추의 <span class="naver-blog-text">네이버 공식블로그</span>에서
             <strong>임대보증금 반환대출 사례</strong>를 확인해보세요.</p></br>
-            기존 임차인 보증금 반환, 추가 운전자금대출 사례와
+            기존 임차인 보증금 반환 및및 추가 대출 사례와
             금리 및 플랫폼수수료 수준을 미리 확인해 보세요.
           </p>
           <div class="product-card__buttons">
@@ -233,7 +233,7 @@
         <article class="product-info-card">
           <h3>Q. 임대보증금 반환대출 한도는 어떻게 정해지나요?</h3>
           <p>
-            보통 <strong>KB시세 × LTV − 선순위 채권액 − 기존 임대보증금 등</strong>을 기준으로
+            보통 <strong>하우스머치시세 × LTV − 선순위 채권액 − 기존 임대보증금 등</strong>을 기준으로
             대략적인 한도를 산정합니다.
           </p>
           <p>
@@ -258,7 +258,7 @@
           <p>
             네. 가능합니다.</p>
           <p>
-            KB시세, 선순위 대출, 임대보증금 등을 입력하면
+            하우스머치시세, 선순위 대출, 임대보증금 등을 입력하면
             <strong>대략적인 대출 가능 금액</strong>과 <strong>추가 대출가능</strong>금액까지
             사전에 가늠해 볼 수 있습니다.
           </p>
@@ -274,7 +274,7 @@
         <span class="product-tag">#전세보증금대출</span>
         <span class="product-tag">#월세보증금대출</span>
         <span class="product-tag">#임대보증금반환</span>
-        <span class="product-tag">#법원임대차</span>
+        <span class="product-tag">#추가담보대출출</span>
         <span class="product-tag">#후순위담보대출</span>
         <span class="product-tag">#P2P대출</span>
         <span class="product-tag">#P2P주담대</span>
