--- a/beta/products/detached-deposit.html
+++ b/beta/products/detached-deposit.html
@@ -23,17 +23,14 @@
         </span>
       </a>
 
-      <div class="beta-menu">
-        <button id="betaMenuToggle"
-                class="beta-menu-toggle"
-                type="button"
-                aria-haspopup="true"
-                aria-expanded="false">
-          <span class="beta-menu-toggle__icon">
-            <span></span><span></span><span></span>
-          </span>
-          <span class="beta-menu-toggle__label">MENU</span>
-        </button>
+    <!-- MENU + 드롭다운 -->
+<button id="betaMenuToggle"
+        class="beta-menu-toggle"
+        type="button"
+        aria-haspopup="true"
+        aria-expanded="false">
+  <span class="beta-menu-toggle__label">MENU</span>
+</button>
 
         <div id="betaMenuPanel" class="beta-menu-panel hide">
           <a class="beta-menu-link" href="/beta/">온투업 대출통계</a>
