--- a/beta/products/apt-refinance.html
+++ b/beta/products/apt-refinance.html
@@ -53,12 +53,12 @@
         <p class="hero-intro">
           온라인투자연계금융업(이하 ‘온투업’) 아파트 담보대출 상품 중
           <strong>대부대환대출</strong>에 관한 정보입니다.</br>
-          기존 <strong>고금리 대부업·캐피탈 아파트담보대출을</strong> 
-          온투업 담보대출로 갈아타거나, 금리·구조를 조정할 때 활용되는 상품입니다.
+          기존 <strong>고금리 대부업 아파트담보대출을</strong> 
+          온투업 담보대출로 갈아타면서 금리·구조를 조정할 때 활용되는 상품입니다.
         </p>
 
         <!-- 항목 앞에 · 과 Ι 적용 -->
-        <p>· <strong>대상고객</strong> Ι 고금리 대부업·캐피탈 아파트담보대출 이용 중인 개인</p>
+        <p>· <strong>대상고객</strong> Ι 고금리 대부업 담보대출을 이용 중인 개인</p>
         <p>· <strong>대출한도</strong> Ι 최소 2천만원 ~ 최대 70억원</p>
         <p>· <strong>대출약정</strong> Ι 대면 또는 비대면 (업체별 상이)</p>
         <p>· <strong>대출금리</strong> Ι 최저 6.7% ~ 최대 15.9%</p>
@@ -89,7 +89,7 @@
             <li>간단한 정보로도 <strong>OK</strong></li>
             <li class="calculator-last-li">
               <span>
-                KB시세, 선순위·기존 대출, 임대보증금 등을 반영해
+                KB시세, 선순위 대출, 임대보증금 등을 반영해
                 <strong>대부대환 및 추가 대출 가능 여력</strong>을 가늠할 수 있습니다.
               </span>
               <div class="product-card__buttons">
@@ -102,12 +102,12 @@
         <!-- 오른쪽: 실제 대출 사례 안내 -->
         <article class="product-info-card calculator-extra-card">
           <h2 class="products-section__title">실제 대부대환대출 사례를 확인하세요.</h2>
-          <h3 class="calculator-extra-subtitle">고금리·단기대출을 장기·안정 구조로</h3>
+          <h3 class="calculator-extra-subtitle">고금리 대출을 장기·안정 구조로</h3>
           <p class="calculator-extra-text">
             후추의 <span class="naver-blog-text">네이버 공식블로그</span>에서
             <strong>대부대환대출 사례</strong>를 확인해보세요.</p></br>
-            기존 대부업·캐피탈 대출 상환, 추가 운전자금 조달 구조와
-            금리·플랫폼수수료 수준을 미리 비교해 보세요.
+            기존 대부업대출 상환, 추가 운전자금 조달 구조와
+            금리·플랫폼수수료 수준을 비교해 보세요.
           </p>
           <div class="product-card__buttons">
             <a href="https://blog.naver.com/honestbros"
@@ -130,17 +130,13 @@
           <li>만 19세 이상 내국인</li>
           <li>신용점수 (NICE) 350점 또는 (KCB) 454점 이상 고객</li>
           <li>본인 또는 배우자 명의로 아파트를 소유 중인 고객</li>
-          <li>아파트를 담보로 한 고금리 대부업·캐피탈 대출을 이용 중인 고객</li>
+          <li>아파트를 담보로 고금리 대부업 대출을 이용 중인 고객</li>
           <li>본인 혹은 배우자 소득이 있는 고객</li>
         </ul>
 
         <h3>대출한도</h3>
         <ul style="margin-bottom:14px;">
-          <li>
-            <strong>기준시세 × LTV − 선순위 채권액 − 임대보증금 등</strong>
-          </li>
-          <li>대부대환 목적의 경우, 산출된 한도 내에서 기존 대출 상환액이 우선 배정되며,</li>
-          <li>추가 자금 필요 여부에 따라 일부 한도만 대환용으로 사용하는 구조도 가능합니다.</li>
+          <li>최소 1천만원 ~ 최대 70억원</li>
         </ul>
 
         <h3>대출기간</h3>
@@ -155,8 +151,8 @@
 
         <h3>자금 용도</h3>
         <ul style="margin-bottom:14px;">
-          <li>기존 대부업·캐피탈 아파트담보대출 상환(대환)</li>
-          <li>추가 운영자금·생활자금 등 (허용 범위 내에서)</li>
+          <li>기존 대부업 아파트담보대출 상환(대환)</li>
+          <li>추가 운영자금·생활자금 대출 (허용 한도 내에서)</li>
         </ul>
 
         <h3>만기연장</h3>
@@ -178,7 +174,7 @@
         <h3>기타·부대비용</h3>
         <ul style="margin-bottom:14px;">
           <li>근저당권 설정 관련 비용</li>
-          <li>기존 대부·캐피탈 대출 말소 등기 비용</li>
+          <li>기존 대출 말소 등기 비용</li>
           <li>임대차 권리조사 비용 (임대수익 활용 시)</li>
           <li>감정비용 (시세 확인이 어려운 경우)</li>
           <li>출장 자서비용 등 (대면 자서 온투업사의 경우)</li>
@@ -193,24 +189,24 @@
 
     <!-- 2. 이런 경우 아파트 대부대환대출을 찾습니다. -->
     <section class="products-section products-section--info">
-      <h2 class="products-section__title">2. 이런 경우 아파트 대부대환대출을 찾습니다.</h2>
+      <h2 class="products-section__title">2. 이런 경우 대부업 대환대출을 찾습니다.</h2>
       <div class="products-info-grid">
         <article class="product-info-card">
           <h3>고금리 이자 부담이 너무 클 때</h3>
           <p>
-            대부업·캐피탈 아파트담보대출 금리가 <strong>연 15% 안팎까지 올라</strong>
+            대부업·캐피탈 아파트담보대출 금리가 <strong>연 18% 안팎까지 올라</strong>
             이자 부담이 큰 경우, 상대적으로 낮은 금리의
-            온투업 담보대출로 대환을 검토하는 사례가 많습니다.
+            온투업 담보대출로 대환을 검토하는 사례가 있있습니다.
           </p>
         </article>
 
         <article class="product-info-card">
-          <h3>단기·롤오버 위주의 구조를 정리하고 싶을 때</h3>
+          <h3>중도상환수수료 적용 기간이 지났을때</h3>
           <p>
-            몇 개월 단위 단기대출을 반복 연장(롤오버)하며
-            수수료·이자를 계속 부담해 온 경우,
-            <strong>일정 기간 한 번에 정리하는 구조</strong>로 갈아타기 위해
-            대부대환대출을 활용하기도 합니다.
+            온투업과 같이 대부업은 취급수수료(플랫폼수수료)가 별도로 없고
+            <strong>중도상환수수료</strong>를 3%~5%를 적용하고 있어
+            중도상환수수료 적용 기간이 지나면 온투업으로 리파이낸싱을 통해
+            이자 부담을 줄이고자 활용하기도 합니다.
           </p>
         </article>
 
@@ -218,7 +214,7 @@
           <h3>추가 자금까지 한 번에 조정하고 싶을 때</h3>
           <p>
             기존 대부대출 상환과 동시에
-            <strong>소규모 공사비·사업운영자금 등 추가 자금</strong>이 필요한 경우,
+            <strong>사업운영자금 등 추가 자금</strong>이 필요한 경우,
             LTV 한도 내에서 대환과 추가자금을 함께 조달하는 구조를
             온투업 대부대환대출로 검토할 수 있습니다.
           </p>
@@ -231,28 +227,29 @@
       <h2 class="products-section__title">3. 자주 묻는 질문 (FAQ)</h2>
       <div class="products-info-grid">
         <article class="product-info-card">
-          <h3>Q. 은행·저축은행 대출도 대부대환대출로 갈아탈 수 있나요?</h3>
+          <h3>Q. 대부업대환대출 한도는 어떻게 정해지나요?</h3>
           <p>
-            상품명은 ‘대부대환대출’이지만, 실제로는
-            <strong>기존 대출의 종류·금리·담보구조에 따라</strong>
-            취급 가능 여부가 달라집니다.
+            대출 한도는 <strong>기준시세 × LTV − 선순위 채권액 등</strong>으로 계산됩니다.
           </p>
           <p>
-            일반적으로 고금리 대부업·캐피탈 대출을 대상으로 하는 사례가 많으며,
-            세부 가능 여부는 각 온투업사와 사전 상담이 필요합니다.
+            기준시세는 부동산 종류별로 각각 다른 기준이 적용됩니다.
+            보통 아파트의 경우는 KB시세를, 빌라/연립의 경우 하우스머치가 적용됩니다.
+          </p>
+          <p>
+            그 외의 경우 각 온투업사의 자체 감정으로 기준시세를 결정합니다.
           </p>
         </article>
 
         <article class="product-info-card">
-          <h3>Q. 금리가 어느 정도까지 내려가나요?</h3>
+          <h3>Q. 금리는 어느 정도까지 내려가나요?</h3>
           <p>
-            대출자의 신용, 아파트 위치·담보가치, 기존 대출 조건 등에 따라
+            대출자의 소득, 아파트 위치·담보가치, 기존 대출 조건 등에 따라
             <strong>적용 금리는 크게 달라질 수 있습니다.</strong>
           </p>
           <p>
             온투업 대부대환대출이 모든 경우에 기존 대출보다
             무조건 낮은 금리를 보장하는 것은 아니므로,
-            여러 조건(금리·수수료·기간 등)을 함께 비교하는 것이 중요합니다.
+            여러 조건(금리·수수료·중도상환수수료 등)을 함께 비교하는 것이 중요합니다.
           </p>
         </article>
 
