--- a/beta/ontu-stats.html
+++ b/beta/ontu-stats.html
@@ -39,8 +39,8 @@
       <!-- 드롭다운 패널 -->
       <div id="betaMenuPanel" class="beta-menu-panel hide">
         <a class="beta-menu-link" href="/beta/">온투업 대출 통계(요약)</a>
-        <a class="beta-menu-link" href="/beta/ontu-stats.html">온투업 대출 통계(상세)</a>
-        <a class="beta-menu-link" href="/beta/products/index.html">온투업 대출상품 정보</a>
+        <a class="beta-menu-link" href="/beta/ontu-stats.html">대출통계</a>
+        <a class="beta-menu-link" href="/beta/products/index.html">대출상품</a>
         <a class="beta-menu-link" href="/">담보대출 계산기</a>
         <a class="beta-menu-link" href="/company.html">회사소개</a>
         <a class="beta-menu-link" href="/contact.html">광고문의</a>
@@ -57,10 +57,9 @@
       <section class="beta-section beta-section--filter">
         <div class="beta-stats-header">
           <div class="beta-stats-header__left">
-            <h1 class="beta-stats-title">온투업 담보대출 통계 (상세)</h1>
+            <h1 class="beta-stats-title">대출 통계</h1>
             <p class="beta-stats-subtitle">
-              기준월을 선택하면 해당 월의 대출현황과 상품유형별 잔액을 확인하고,
-              전월 대비 증감 금액을 함께 볼 수 있습니다.
+              전체 온라인투자연계금융업(P2P)의 대출 현황을 확인할 수 있습니다.
             </p>
           </div>
           <div class="beta-stats-header__right">
