--- a/beta/ontu-stats.html
+++ b/beta/ontu-stats.html
@@ -71,31 +71,33 @@
         </div>
       </section>
 
-      <!-- 대출현황 섹션 -->
+           <!-- 대출현황 섹션 -->
       <section class="beta-section">
-        <div class="beta-section__header">
-          <div class="beta-section__title-wrap">
-            <h2 class="beta-section__title">대출현황</h2>
+        <div class="loan-panel loan-panel--status">
+          <div class="loan-panel__header">
+            <h2 class="loan-panel__title">대출 현황</h2>
+            <div id="loanStatusMonth" class="loan-panel__meta"></div>
           </div>
-          <div id="loanStatusMonth" class="beta-section__meta"></div>
-        </div>
 
-        <div class="beta-card beta-card--wide" id="ontuLoanStatus">
-          <!-- JS에서 카드 그리드로 렌더링 -->
+          <div class="loan-panel__body">
+            <!-- JS에서 카드 그리드로 렌더링 (beta-loanstatus-grid) -->
+            <div id="ontuLoanStatus"></div>
+          </div>
         </div>
       </section>
 
       <!-- 상품유형별 대출잔액 섹션 -->
       <section class="beta-section">
-        <div class="beta-section__header">
-          <div class="beta-section__title-wrap">
-            <h2 class="beta-section__title">상품유형별 대출잔액</h2>
+        <div class="loan-panel loan-panel--product">
+          <div class="loan-panel__header">
+            <h2 class="loan-panel__title">상품유형별 대출잔액</h2>
+            <div id="productStatusMonth" class="loan-panel__meta"></div>
           </div>
-          <div id="productStatusMonth" class="beta-section__meta"></div>
-        </div>
 
-        <div class="beta-card beta-card--wide" id="ontuProductSection">
-          <!-- JS에서 도넛 + 카드 리스트로 렌더링 -->
+          <div class="loan-panel__body">
+            <!-- JS에서 상품유형 카드 리스트 렌더링 -->
+            <div id="ontuProductSection"></div>
+          </div>
         </div>
       </section>
 
